# punge

./: .gitattributes  .gitignore  Cargo.toml  README.md  main - Copy.db  main.db  main.py  punge_ui.py  pyproject.toml  resource_file.py  resource_file_rc.py  ui_functions.py
cache/: config.json  locations.json  music.json  stragglers.json
img/: resource_file.qrc
src/: main.rs  mod.rs  old_lib.rs  old_main.rs  playliststructs.rs  types.rs
src/db/: create_db.rs  fetch.rs  insert.rs  metadata.rs  mod.rs  update.rs  utilities.rs
src/gui/: download_page.rs  media_page.rs  messages.rs  mod.rs  new_playlist_page.rs  persistent.rs  playlist_bar.rs  scroller.rs  setting_page.rs  song_edit_page.rs  start.rs  subscription.rs  table.rs
src/gui/style/: button.rs  container.rs  menu.rs  mod.rs  scrubber.rs  volume.rs
src/gui/widgets/: hover_menu.rs  list.rs  mod.rs  playlist_button.rs  row.rs  row_overlay.rs  separator.rs
src/lib/: create.rs
src/player/: cache.rs  interface.rs  mod.rs  old_interface.rs  player_cache.rs  sort.rs
src/utils/: backup.rs  cache.rs  compare_db.rs  convert_old_mp3.rs  create_db.rs  db.rs  db_convert.rs  decide_youtube.rs  delete.rs  image.rs  key.rs  mod.rs  num.rs  playlist.rs  sep_video.rs  time.rs  types.rs  youtube_errors.rs  youtube_interface.rs
src/yt/: cmd.rs  interface.rs  mod.rs  search.rs
