[package]
name = "punge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "punge"
path = "./src/main.rs"

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled", "chrono"] }
regex = "1.7.0" # for finding words in the search algorithm
rusty_ytdl = {version = "0.7.3", features = ["blocking"] }  # yt downloads, actually is updated
reqwest = {features = ["blocking"], version = "0.11.13"}  # image downloads (soon) and html for playlist
serde_json = "1.0.89" # json cache
itertools = "0.10.5" # mostly for collect_vec()
chrono = "0.4.24"  # date an time for db
thiserror = "1.0"  # errors, should change this at some point
uuid = {features = ["v4"], version = "1.3.1" }  # db uuids
serde = {version ="1.0.160", features = ["derive"]}
rodio = "0.19"  # audio playback :)
iced = {git = "https://github.com/iced-rs/iced", branch = "feature/list-widget-reloaded", features = ["advanced", "image"] }
tokio = {version = "1.29.0", features = ["time", "sync"]} # async sender
async-std = "1.12.0"  # sleeping in subscriptions
global-hotkey = "0.5.1"  # no explaination needed
mp3-duration = "0.1.10"  # ditto ^
rand = "0.8"  # shuffling the list
arc-swap = "1.6.0" # allows MusicData to be in multiple places at once
iced_core = "0.12.3"  # for the stylin in gui\style\*
log = "0.4.21"  # stinky crate conflict
discord-rich-presence = "0.2.3" # this one is better than the others available
simplelog = "0.12.2"
once_cell = "1.19.0"
